# streamlit_test_deploy

./: .dockerignore  .gitignore  LICENSE  README.md  dockerfile  pyproject.toml  requirement.txt  test.db
.devcontainer/: devcontainer.json
.github/workflows/: publish_ghcr.yml
src/data/: test.db
src/myapp/: __init__.py  app.py
src/myapp/_pages/: home.py  login.py  new_account.py
src/myapp/common/: __init__.py  constants.py  container.py  repository.py  state_manager.py
src/myapp/common/database/: __init__.py  async_Database.py  async_sqlite.py  database.py  sqlite_db.py  supabase_db.py  supabase_db_v2.py  test_db.py
src/myapp/data/: chat_app.db
src/myapp/modules/: __init__.py
src/myapp/modules/chat/: __init__.py  chat_repo.py  chat_repository.py  chat_repository_supabase.py  chat_service.py
src/myapp/modules/group/: __init__.py  group_repo.py  group_repository.py  group_repository_supabase.py  group_service.py
src/myapp/modules/message/: __init__.py  message_repo.py  message_repository.py  message_repository_supabase.py  message_service.py
src/myapp/modules/user/: __init__.py  user_repo.py  user_repository.py  user_repository_supabase.py  user_service.py
src/myapp/pages/: home.py  login.py  new_account.py
test/Modules/Chat/: test_chat_repository.py
test/Modules/User/: test_user_service.py
tests/Modules/Chat/: test_chat_repository.py
tests/Modules/User/: test_user_repository.py  test_user_service.py
