[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "myapp"
version = "0.1.0"
description = "A simple chat app to explore streamlit and software engineering basics"
requires-python = ">=3.10"
authors = [
  { name = "Hari Karthick", email = "hari.ksp@zohointern.com" }
]
dependencies = [
  "streamlit"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
exclude = ["myapp/Test"]

[tool.ruff.lint]
select = ["UP", "E", "F", "B", "SIM", "I", "PERF", "PL"]
ignore = ["E501", "PLR0913"]
